# gordon_nemo

./: .gitignore  README.md  prepare_environment_host.sh  pyproject.toml
PEFT_finetune/: README.md
cudnn_verification/: check_cudnn.py  check_cudnn.sh
exp_lightning/: README.md  generate_data.py  multiblock_adapter.py  multiblock_regressor.py  multiblock_regressor_nemo.py  multiblock_regressor_nemo_impl.py  multiblock_train.py  run_model.py  run_model.sh
finetune/: README.md
hello-world/: README.md  hello_experiments.ipynb  hello_scripts.py  hello_world.ipynb
llama_nemo2-sft-peft/: nemo2-sft.ipynb
long_context/: long_context.py
multiblock_regression/: README.md  generate_data.py  mac_compatible_adapter.py  mac_compatible_adapter_example.py  multiblock_adapter.py  multiblock_debug_config.yaml  multiblock_evaluate.py  multiblock_finetune.py  multiblock_regressor.py  multiblock_train.py  multiblock_train_debug.py  test_modelpt_lightning.py
mwe_recipe/: README.md  dummy_recipe_mwe.py  dummy_recipe_mwe_1.py  dummy_recipe_mwe_2.py  dummy_recipe_mwe_3.py  dummy_recipe_mwe_4.py  dummy_recipe_mwe_5.py  dummy_recipe_mwe_6.py  dummy_recipe_mwe_7.py  dummy_recipe_mwe_8.py  dummy_recipe_mwe_8.sh  dummy_recipe_mwe_gpu_8.py  dummy_recipe_mwe_gpu_8.sh  mwe_llm_cli_factory.py  mwe_llm_cli_factory.sh  submit_job.sh  templatized_slurm_script.sh
nemo_apptainer/: apptainer_2025-06-02.def
new_slurm_apptainer_template/: README.md  build_enhanced_container.sh  cuda_uv_with_deps.def  download_cuda_packages.sh  hello.py  prepare_environment.sh  prepare_environment_host.py  prepare_environment_host.sh  script.slurm  submit_script.sh
templatized_slurm/: README.md  templatized_slurm_script.sh
transformer_engine_demo/: apptainer_2025-06-02.def  apptainer_te_2025-06-02.def  err  install_transformer_engine_alternatives.slurm  script.slurm  (+7 more)
(+37 files in other folders)
